Fix CSS bug which stretched background images

--- a/css/style.css
+++ b/css/style.css
@@ -40,6 +40,7 @@ html, body{
     display:block;position:absolute;z-index:-1;
     min-width:100%;
     min-height:100%;
+    background: transparent url('images/bg1.png') center center no-repeat;
     background-size:cover;
 }
 #profile { height: 325px; width: 325px; }
